Fix Swiper slider marquee autoplay JS execution and restore slide margin gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1256,6 +1256,7 @@ body {
 
 .gallery-swiper .swiper-slide {
     width: 42%;
+    margin-right: 20px;
 }
 
 /* Make image styling similar to image border we see in the design (none, just shadow or thin border) */
